# Master_Thesis_PersonRecognition_UsingFace-BodyInformation_Kinect

src/: CMakeLists.txt
src/human_recognition/: CMakeLists.txt  package.xml
src/human_recognition/include/human_recognition/: a_star.h  calc_skeleton_features.h  human_recognition.h  sparse_face_recognition.h
src/human_recognition/src/: a_star.cpp  calc_skeleton_features.cpp  crop_face_with_head_pos.cpp  human_recognition.cpp  human_recognition_node.cpp  sparse_face_recognition.cpp
src/test_node/: CMakeLists.txt  package.xml
src/test_node/include/human_recognition_test/: human_recognition_test.h
src/test_node/src/: human_recognition_test.cpp  human_recognition_test_node.cpp
